Fix text overflow from well div.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,6 +19,7 @@ body {
   width: 70%;
   border-style: solid;
   padding: 10px;
+  word-wrap: break-word;
 }
 
 h1, h2{
